--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
                         <br>
                         <button id="sign-up-button">Get started <i class="fas fa-arrow-right"></i></button>
                     </div>
+                    <br>
+                    <p id="email-message">Email sent!</p>
                 </div>
             </div>
         </div>
