--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <button id="sign-up-button">Get started <i class="fas fa-arrow-right"></i></button>
                     </div>
                     <br>
-                    <p id="email-message">Email sent!</p>
+                    <p id="email-message"></p>
                 </div>
             </div>
         </div>
