--- a/index.html
+++ b/index.html
@@ -21,16 +21,30 @@
         <div id="login-box">
             <i class="fas fa-times" id="close-login-modal"></i>
             <p id="logo-login">sigmoid</p>
-            <p id="login-box-top-text">Sign In</p>
-            <input type="text" placeholder="Your Fullname" id="sign-in-name">
-            <br>
+            <p style="font-weight: 700; font-size: 20px;" id="login-box-top-text">Sign In</p>
             <input type="email" placeholder="Your Email" id="sign-in-email">
             <br>
             <input type="password" placeholder="Password" id="sign-in-pwd">
             <br>
             <div id="buttons">
                 <button id="sign-in-submit">Submit</button>
-                <p id="register-button">Sign Up instead</p>
+                <p id="login-register-button">Sign Up instead</p>
+            </div>
+        </div>
+
+        <div id="register-box">
+            <i class="fas fa-times" id="close-register-modal"></i>
+            <p id="logo-register">sigmoid</p>
+            <p style="font-weight: 700; font-size: 20px;" id="register-box-top-text">Sign Up</p>
+            <input type="text" placeholder="Your Fullname" id="sign-up-name">
+            <br>
+            <input type="email" placeholder="Your Email" id="sign-up-email">
+            <br>
+            <input type="password" placeholder="Password" id="sign-up-pwd">
+            <br>
+            <div id="buttons">
+                <button id="sign-up-submit">Submit</button>
+                <p id="register-login-button">Login instead</p>
             </div>
         </div>
 
