--- a/dashboard.html
+++ b/dashboard.html
@@ -6,33 +6,59 @@
         <title>Sigmoid | Dashboard</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link href="https://fonts.googleapis.com/css?family=Raleway:500,600,700" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Raleway:500,600,700,800" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
         <link rel="stylesheet" type="text/css" media="screen" href="db_styles.css" />
+        <script src="project_card.js"></script>
         <script src="db_app.js"></script>
     </head>
 
     <body>
-
         <div id="header">
-            <div>
-                <p id="logo-top">sigmoid</p>
+            <div id="logo">
+                <p>sigmoid</p>
+            </div>
+            <div id="menu">
+                <p>Projects</p>
+                <p>About</p>
+                <p>Help</p>
+                <button id="add-project-button"><i class="fas fa-plus"></i></button>
+                <button id="sign-out-button">Log out</button>
             </div>
         </div>
 
-        <div id="hero">
-            <p id="title">We are launching soon!</p>
-            <p id="subtitle">Cloud Machine Learning is about to get a whole lot easier!</p>
-            <div id="social">
-                <p style="font-weight: 600;">Follow us <i class="fas fa-chevron-right" style="color: black; padding: 0 7px;font-size: 15px;"></i></p>
-                <i class="fab fa-twitter"></i>
-                <a href="https://medium.com/sigmoid" target="blank_"><i class="fab fa-medium-m"></i></a>
+        <div id="projects">
+            <p id="section-title">Models</p>
+            <div id="stats">
+                <p id="jobs-total">Total Jobs: <span></span></p>
+                <p id="jobs-running">Running: <span></span></p>
             </div>
-        </div>
+            <table class="dashboard-table">
+                <colgroup>
+                    <col width="150">
+                    <col width="100">
+                    <col width="50">
+                    <col width="180">
+                    <col width="50">
+                    <col width="100">
+                </colgroup>
 
-        <div id="footer">
-            <p><i style="color: #ebb339;padding: 0 5px;font-size: 15px;" class="fas fa-code"></i> with <i style="color: #ff6b6b; padding: 0 5px;font-size: 15px;" class="fas fa-heart"></i> by <span>sigmoid</span> &copy; 2018</p>
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Type</th>
+                        <th>Classes</th>
+                        <th>REST URL</th>
+                        <th>Status</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+
+                <tbody id="project-dashboard">
+                    
+                </tbody>
+            </table>            
         </div>
         
     </body>
