--- a/project.html
+++ b/project.html
@@ -9,6 +9,10 @@
         <link href="https://fonts.googleapis.com/css?family=Raleway:500,600,700,800" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+        <script src="params.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/5.4.2/firebase.js"></script>
         <script src="project_card.js"></script>
         <link rel="stylesheet" type="text/css" media="screen" href="project.css" />
         <script src="project.js"></script>
@@ -78,14 +82,23 @@
             </div>
 
             <p id="project-prompts">Add training data</p>
-            <input type="file" id="choose-training-data" multiple>
+            <input type="file" id="choose-training-data" multiple directory webkitdirectory>
             <button id="training-data-choose-button"><i class="fas fa-upload"></i></button>
 
             <p id="total-instances">Total number of instances: <span>0</span></p>
             <p id="num-classes">Number of classes: <span>0</span></p>
 
             <div id="training-data-container">
-            
+                <div class="training-data-card">
+                    <div class="tdc-top">
+                        <input type="text" class="training-data-class" />
+                        <p class="num-training-instances"></p>
+                    </div>
+                    <div class="tdc-bottom">
+                        <input type="file" class="tdc-file-choose" multiple directory webkitdirectory>
+                        <button class="tdc-upload-button"><i class="fas fa-upload"></i></button>
+                    </div>
+                </div>
             </div>
 
             <button id="train-button">Start Training <i class="fas fa-arrow-right"></i></button>
