--- a/project.html
+++ b/project.html
@@ -82,14 +82,14 @@
             </div>
 
             <p id="project-prompts">Add training data</p>
-            <input type="file" id="choose-training-data" multiple directory webkitdirectory>
-            <button id="training-data-choose-button"><i class="fas fa-upload"></i></button>
+            <!-- <input type="file" id="choose-training-data" multiple directory webkitdirectory> -->
+            <button id="training-data-choose-button"><i class="fas fa-plus"></i></button>
 
-            <p id="total-instances">Total number of instances: <span>0</span></p>
-            <p id="num-classes">Number of classes: <span>0</span></p>
+            <!-- <p id="total-instances">Total number of instances: <span>0</span></p>
+            <p id="num-classes">Number of classes: <span>0</span></p> -->
 
             <div id="training-data-container">
-                <div class="training-data-card">
+                <!-- <div class="training-data-card">
                     <div class="tdc-top">
                         <input type="text" class="training-data-class" />
                         <p class="num-training-instances"></p>
@@ -98,7 +98,7 @@
                         <input type="file" class="tdc-file-choose" multiple directory webkitdirectory>
                         <button class="tdc-upload-button"><i class="fas fa-upload"></i></button>
                     </div>
-                </div>
+                </div> -->
             </div>
 
             <button id="train-button">Start Training <i class="fas fa-arrow-right"></i></button>
