--- a/dashboard.html
+++ b/dashboard.html
@@ -10,6 +10,8 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
         <link rel="stylesheet" type="text/css" media="screen" href="db_styles.css" />
+        <script src="params.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/5.4.2/firebase.js"></script>
         <script src="project_card.js"></script>
         <script src="db_app.js"></script>
     </head>
