--- a/project.html
+++ b/project.html
@@ -82,24 +82,18 @@
             </div>
 
             <p id="project-prompts">Add training data</p>
-            <!-- <input type="file" id="choose-training-data" multiple directory webkitdirectory> -->
             <button id="training-data-choose-button"><i class="fas fa-plus"></i></button>
 
-            <!-- <p id="total-instances">Total number of instances: <span>0</span></p>
-            <p id="num-classes">Number of classes: <span>0</span></p> -->
+            <div id="training-data-container"></div>
 
-            <div id="training-data-container">
-                <!-- <div class="training-data-card">
-                    <div class="tdc-top">
-                        <input type="text" class="training-data-class" />
-                        <p class="num-training-instances"></p>
-                    </div>
-                    <div class="tdc-bottom">
-                        <input type="file" class="tdc-file-choose" multiple directory webkitdirectory>
-                        <button class="tdc-upload-button"><i class="fas fa-upload"></i></button>
-                    </div>
-                </div> -->
-            </div>
+            <!-- 
+                training card
+                    TOP
+                        class label
+                        num instances
+                    BOTTOM
+                        upload button
+            -->
 
             <button id="train-button">Start Training <i class="fas fa-arrow-right"></i></button>
         </div>
